添加jvm tuning